Fixed hero title for dark mode only

--- a/app/assets/css/utilities.css
+++ b/app/assets/css/utilities.css
@@ -16,7 +16,7 @@
   @apply mx-auto max-w-sm sm:float-right sm:ms-5 sm:mb-5;
 }
 
-.hero {
+.dark .hero {
   @apply text-white;
 }
 
